[package]
name = "newsletter-spammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1


[dependencies]
reqwest = {version = "0.11.12", features = ["blocking"]}
egui = "0.19.0"
eframe = { version = "0.19.0", default-features = false, features = ["persistence", "wgpu"] }
regex = "1.7.0"
headless_chrome = { version = "0.9.0"}
wasm-bindgen = "0.2.83"
tokio = {version = "1.21.2", features = ["macros"]}
futures = "0.3.25"